# todo-tui

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
crates/todo-server/: Cargo.toml
crates/todo-server/src/: config.rs  error.rs  main.rs  routes.rs
crates/todo-server/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
crates/todo-server/src/db/: mod.rs
crates/todo-server/src/handlers/: auth.rs  comments.rs  documents.rs  mod.rs  search.rs  statuses.rs  tags.rs  tasks.rs  workspaces.rs
crates/todo-shared/: Cargo.toml
crates/todo-shared/src/: lib.rs
crates/todo-shared/src/api/: auth.rs  documents.rs  mod.rs  search.rs  tasks.rs  workspaces.rs
crates/todo-shared/src/models/: comment.rs  document.rs  mod.rs  task.rs  user.rs  workspace.rs
crates/todo-tui/: Cargo.toml
crates/todo-tui/src/: app.rs  calendar.rs  editor.rs  figlet.rs  main.rs  markdown.rs  ui.rs
crates/todo-tui/src/api/: auth.rs  client.rs  mod.rs  preferences.rs  quote.rs  workspace_state.rs
docs/: roadmap.md
migrations/: 00001_users_auth.down.sql  00001_users_auth.up.sql  00002_workspaces.down.sql  00002_workspaces.up.sql  00003_tasks.down.sql  00003_tasks.up.sql  00004_documents.down.sql  00004_documents.up.sql  00005_integrations.down.sql  00005_integrations.sql  00006_search_indexes.down.sql  00006_search_indexes.up.sql  00007_username_verification.down.sql  00007_username_verification.up.sql  00008_default_workspace.down.sql  00008_default_workspace.up.sql
