[package]
name = "todo-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Backend server for TODO TUI application"

[dependencies]
todo-shared = { path = "../todo-shared", features = ["sqlx"] }

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Auth
jsonwebtoken.workspace = true
argon2.workspace = true

# Common types
uuid.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Config
dotenvy.workspace = true

# Utils
rand = "0.8"
regex = "1"
