[package]
name = "todo-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types and models for TODO TUI application"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
