[package]
name = "todo-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types and models for TODO TUI application"

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
sqlx = { version = "0.7", features = ["postgres"], optional = true }
